syntax = "proto3";

package net.pb;

message NbsAddr {
    string networkId    = 1;
    bool canServer      = 2;
    string pubIp        = 3;
    int32  pubPort      = 4;
    string priIp        = 5;
    int32 priPort       = 6;
    string natIP        = 7;
    int32  natPort      = 8;
}
